added dom stuff

--- a/dom-01-starting-code/index.html
+++ b/dom-01-starting-code/index.html
@@ -8,6 +8,22 @@
   <script src="app.js" defer></script>
 </head>
 <body>
-  
+  <header>
+    <h1 id="main-title">Dive into Dom</h1>
+  </header>
+  <ul>
+    <li>Item 1</li>
+    <li class="list-item">Item 2</li>
+    <li class="list-item">Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+    <li>Item 6</li>
+    <li>Item 7</li>
+    <li>Item 8</li>
+    <li>Item 9</li>
+    <li>Item 10</li>
+  </ul>
+
+  <input class="inp" value="some default">
 </body>
 </html>
